# oss-pr-review-agent

./: .dockerignore  .env.example  .gitignore  .gitmodules  Dockerfile  README.md  app.py  db.py  karpathy_check.py  pyproject.toml  slack_handler.py
plugins/: __init__.py  base.py  circleci_access.py  deps.py
runs/karpathy_check/: pr_25613_scope.json  pr_25613_transcript.json  pr_26417_scope.json  pr_26417_transcript.json  pr_26595_scope.json  pr_26595_transcript.json
scripts/: benchmark_karpathy_harnesses.py  run_karpathy_check_eval.py
skills-local/litellm-pattern-conformance-reviewer/: SKILL.md
skills-local/litellm-pattern-conformance-reviewer/scripts/: gather_pattern_data.py
skills/pr-review-agent-skills/: .gitignore
skills/pr-review-agent-skills/litellm-karpathy-check/: SKILL.md
skills/pr-review-agent-skills/litellm-pattern-conformance-reviewer/: README.md
skills/pr-review-agent-skills/litellm-pr-reviewer/: README.md
skills/pr-review-agent-skills/litellm-pr-reviewer/.claude-plugin/: plugin.json
skills/pr-review-agent-skills/litellm-pr-reviewer/agents/: litellm-pr-reviewer.md
skills/pr-review-agent-skills/litellm-pr-reviewer/commands/: litellm-review-pr.md
skills/pr-review-agent-skills/litellm-pr-reviewer/scripts/: gather_pr_triage_data.py
tests/: test_auth.py  test_capabilities.py  test_failure_window.py  test_fuse.py  test_fuse_karpathy.py  test_karpathy_check.py  test_mention.py  test_plugin_circleci_access.py  test_triage_regressions.py  test_webhook.py
tests/eval/: README.md  pr_set.json  pr_set_holdout.json  pr_set_shin_regressions.json  pr_set_v2.json  pr_set_v2_smoke.json  run_eval.py  run_one.py  test_eval.py
tests/fixtures/: pr_26441_gather_broken_tail.json  pr_26441_gather_fixed_tail.json  pr_26460_gather_broken_tail.json  pr_26460_gather_fixed_tail.json
