[project]
name = "litellm-bot"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "aiohttp>=3.10.0",
    "fastapi>=0.136.1",
    "httpx>=0.28.1",
    "itsdangerous>=2.2.0",
    "logfire[fastapi,httpx]>=4.0.0",
    "pydantic-ai-slim[openai]>=0.0.20",
    "python-dotenv>=1.2.2",
    "python-multipart>=0.0.26",
    "slack-bolt>=1.27.0",
    "uvicorn>=0.46.0",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=9.0.3",
]

[tool.pytest.ini_options]
# Default to "everything except eval" so a plain `pytest` invocation never
# accidentally fires the live (slow + costs money) eval. Opt in explicitly
# with `pytest -m eval` to run only eval, or `pytest -m "eval or not eval"`
# to run both. The `--strict-markers` would be nice but we keep the float
# loose so contributors can add ad-hoc markers without ceremony.
addopts = "-m 'not eval'"
markers = [
    "eval: live end-to-end eval against the curated PR set (slow, costs LLM money, opt-in only). Run with `pytest -m eval`.",
]
