[project]
name = "litellm-bot"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "aiohttp>=3.10.0",
    "asyncpg>=0.29",
    "fastapi>=0.136.1",
    "httpx>=0.28.1",
    "itsdangerous>=2.2.0",
    "logfire[fastapi,httpx]>=4.0.0",
    "pydantic-ai-slim[openai]>=0.0.20",
    "python-dotenv>=1.2.2",
    "python-multipart>=0.0.26",
    "slack-bolt>=1.27.0",
    "uvicorn>=0.46.0",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=9.0.3",
]

[tool.pytest.ini_options]
# Default to "everything except live evals" so a plain `pytest` invocation
# never accidentally fires the live (slow + costs money) eval. Opt in
# explicitly with one of the eval markers below. `--strict-markers` would
# be nice but we keep it loose so contributors can add ad-hoc markers
# without ceremony.
#
# Two live-eval modes:
#   `pytest -m eval_sample` — fast 5-PR live eval (~1 min, ~$0.10).
#       Designed for push-time / pre-merge sanity. Catches structural drift
#       in the agent's outputs (rationale coverage, schema shape, no
#       markdown leak) without paying for the full curated set.
#   `pytest -m eval`        — full 20-PR live eval (~5 min, ~$0.50).
#       The deep run that also feeds the human-grading summary.md. Use
#       before tagging a release or after a meaningful prompt/skill edit.
addopts = "-m 'not eval and not eval_sample and not triage_regression'"
markers = [
    "eval: live end-to-end eval against the full curated PR set (~5 min, ~$0.50). Opt in with `pytest -m eval`.",
    "eval_sample: live eval against a 5-PR sample for fast push-time signal (~1 min, ~$0.10). Opt in with `pytest -m eval_sample`.",
    "triage_regression: focused single-PR LLM tests that pin specific classifier regressions using fixture-injected gather payloads (~10s, ~$0.02 per test). Opt in with `pytest -m triage_regression`. Use these to lock in a specific bug fix without paying the full eval bill.",
]
